# SecurityCamera

./: README.md  package-lock.json
raspberry pi code/: Cargo.toml  main.rs
security-camera/: package-lock.json  package.json
security-camera/src/app/: globals.css  layout.tsx  page.tsx
security-camera/src/components/: ControlsPanel.tsx  StatusBar.tsx  VideoDisplay.tsx
security-camera/src/types/: camera.ts
