[package]
name = "rust_stream"
version = "0.1.0"
edition = "2025"

[dependencies]
tokio = { version = "1", feature = ["full", "process"] }
tokio-tungstensite = "0.18"
base64 = "0.21"
url = "2.3"
future-util = "0.3"
serde = { version = "1.0", feature = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", feature = ["v4"]}